<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAF0"
    android:padding="40dp"
    tools:context=".UpdateData">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/no"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView1"
        android:layout_below="@id/textView1"
        android:inputType="number"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_create">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText1"
        android:layout_below="@id/editText1"
        android:layout_marginTop="10dp"
        android:text="@string/nama"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView2"
        android:layout_below="@id/textView2"
        android:inputType="text"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_group"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText2"
        android:layout_below="@id/editText2"
        android:layout_marginTop="10dp"
        android:text="@string/ttl"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView3"
        android:layout_below="@id/textView3"
        android:inputType="date"
        android:hint="1990-09-19"
        android:drawableStart="@drawable/ic_date_range"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText3"
        android:layout_below="@id/editText3"
        android:layout_marginTop="10dp"
        android:text="@string/sex"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView4"
        android:layout_below="@id/textView4"
        android:inputType="text"
        android:maxLength="1"
        android:hint="L atau P"
        android:drawableStart="@drawable/ic_person"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText4"
        android:layout_below="@id/editText4"
        android:layout_marginTop="10dp"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView5"
        android:layout_below="@id/textView5"
        android:inputType="text"
        android:maxLength="100"
        android:drawableStart="@drawable/ic_place"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/editText5"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/update"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:drawableStart="@drawable/ic_save"/>


</RelativeLayout>